refactor: Cleanup DoubleUtils